# iterative_closest_point_registration

./: Cargo.toml  README.md
benches/: icp.rs
examples/: robotcar.rs
src/: icp.rs  lib.rs  pointcloud.rs
