[package]
name = "iterative_closest_point_registration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiddo = "0.2.4"
nalgebra = "0.31.4"
navigation-core = {git = "ssh://git@github.com:22/experience-based-navigation/navigation-core.git"}
rayon = "1.6.1"
serde = "1.0.149"
serde_json = "1.0.89"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
pointcloud_drivers = {git = "ssh://git@github.com:22/experience-based-navigation/pointcloud_drivers.git"}
approx = "*"

[profile.bench]
debug = true

[[bench]]
name = "icp"
harness = false

[[example]]
name = "robotcar"
